--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bytes": "^3.0.0",
     "concurrently": "^4.0.1",
     "cookie-session": "^2.0.0-beta.3",
+    "event-stream": "^3.3.4",
     "express": "^4.16.3",
     "http-proxy-middleware": "^0.19.0",
     "localtunnel": "^1.9.1",
